fix z-indexing for fullscreen

--- a/styles/editor/theme.styl
+++ b/styles/editor/theme.styl
@@ -31,7 +31,7 @@ body.full-screen-editor
         position fixed
         right 10px
         top 10px
-        z-index 5
+        z-index 8
         width 500px
         height @width
         padding-top 0
